<resources>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="my_list">My List</string>
    <string name="most">Most</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="placeholder">--</string>

    <!-- Animation transition string -->
    <string name="transition_logo_image">logo_image</string>
    <string name="transition_logo_text">logo_text</string>
    <string name="transition_logo_desc">logo_desc</string>
    <string name="transition_username">tran_username</string>
    <string name="transition_password">tran_password</string>
    <string name="transition_button_main">button_main</string>
    <string name="transition_login_sign_up">button_login_sign_up</string>
    <string name="image">image</string>
    <string name="skip">SKIP</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="app_slogan">Millions of Movies, Series and People to Discover. Explore now.</string>
    <string name="welcome">Welcome</string>

    <!-- Slides -->
    <string name="title_app">App Movie</string>
    <string name="slide_title_1">The Movie</string>
    <string name="slide_title_2">Movies</string>
    <string name="slide_title_3">Series</string>
    <string name="slide_desc_1">Millions of Movies, Series and People to Discover. Explore now.</string>
    <string name="slide_desc_2">The Newest and best movies.</string>
    <string name="slide_desc_3">The newest and best series.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="register">Register</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="full_name">Full Name</string>

    <!-- Facebook -->
    <string name="facebook_app_id">521269512172387</string>
    <string name="fb_login_protocol_scheme">fb521269512172387</string>
    <string name="description">Description</string>
    <string name="loading">Loading...</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="title">Title</string>
    <string name="storyline">In mid-20s New York, Newt Scamander, the British young activist wizard,         arrives in town, holding a mysterious leather suitcase which shelters a wide array of diverse         and magical creatures that exist among us. Amid an already fragile equilibrium of secrecy,         and the increasing disasters ascribed to the dark wizard, Gellert Grindelwald, Newt\'s precious         suitcase will be lost--and to make matters worse--several creatures will manage to escape.         Before long, this situation will catch Senior Auror Percival Graves\' attention who will target         Newt, in the background of an invisible, devastating, and utterly unpredictable menace that still         wreaks havoc on 5th Avenue. In the end, is there a hidden agenda behind Graves\' intentions; moreover,         what will happen to the remaining fantastic beasts still loose in the streets?     -------------         It opens in 1926 as Newt Scamander has just completed a global excursion to find and document an         extraordinary array of magical creatures. Arriving in New York for a brief stopover, he might have         come and gone without incident, were it not for a No-Maj (American for Muggle) named Jacob, a misplaced         magical case, and the escape of some of Newt\'s fantastic beasts, which could spell trouble for both the         wizarding and No-Maj worlds.</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In.</string>
    <string name="name">Name</string>
    <string name="title_movie">Title movie</string>
    <string name="note_default">8.5</string>
    <string name="default_text">--</string>
    <string name="logo_image">logo_image</string>
    <string name="movie_image">movie_image</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forget_password">Forget password?</string>
    <string name="next">Next</string>
    <string name="more">More</string>
    <string name="username">Username</string>
    <string name="details">Details</string>
    <string name="actors_title">Actors</string>
    <string name="famous_phrase">Famous phrase</string>

    <string name="app_name">MyMovieApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favoritos</string>
    <string name="title_find">Buscar</string>
    <string name="title_trending">En carteleras</string>
    <string name="title_popular">Populares</string>
    <string name="title_child">Para niños</string>

    <string name="operational_error_message">Al parecer un error ha ocurrido al realizar la operación</string>
    <string name="connection_error">Algo anda mal con tu conexión, checkealo!!</string>
    <string name="empty_error">Al parecer no hay nada que mostrar.</string>

    <string name="oops">Ooopss!!</string>
    <string name="retry">Reintentar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="actor_title">Actores</string>
    <string name="tagline">Frase célebre</string>
    <string name="description_title">Descripción</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="visible_title">Visible</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_title">Opciones de menu</string>
    <string name="search">Buscar...</string>
    <string name="title_filter">filtrar</string>
    <string name="search_hint">Buscar...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_setting">Preferencias</string>
    <string name="vote_def">8.9</string>
    <string name="app">App</string>
    <string name="movie">movie</string>
    <string name="title_featured_moviealbum">Movie Album</string>
    <string name="title_mylist">Module Title</string>


</resources>