<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/parentLayout"
        android:layout_width="135sp"
        android:layout_height="210sp"
        android:elevation="10sp"
        android:orientation="vertical"
        app:cardCornerRadius="9sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressbar_cv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleX="0.10"
                    android:scaleY="0.10"
                    android:textColor="@color/black"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/img_liview"
                    android:layout_width="135sp"
                    android:layout_height="150sp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/movie_image" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name_our_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/title_movie"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_default"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:stepSize="1"
                    android:theme="@style/RatingBar" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>