<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPoster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:elevation="@dimen/_10ssp"
        android:orientation="horizontal"
        app:cardCornerRadius="9sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            android:baselineAligned="false"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@color/colorBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="0.35"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle"
                    style="@style/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_movie"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:rating="4.5"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/textEvaluation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/default_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:text="@string/default_text"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:drawableStartCompat="@drawable/calendar" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>