<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_8sdp"
    tools:context=".feature_album.presentation.movielist.MovieListFragment"
    tools:ignore="RtlSymmetry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_all_popular"
                    style="@style/btnTextMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_top_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_all_top_rated"
                    style="@style/btnTextMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_now_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_playing"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_all_now_playing"
                    style="@style/btnTextMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_all_upcoming"
                    style="@style/btnTextMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>